initial/target/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'boolean'", "'break'", "'class'", "'continue'", 
                     "'do'", "'else'", "'extends'", "'float'", "'if'", "'int'", 
                     "'new'", "'string'", "'then'", "'for'", "'return'", 
                     "'true'", "'false'", "'void'", "'nil'", "'this'", "'final'", 
                     "'static'", "'to'", "'downto'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'!'", "'^'", 
                     "':='", "'='", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "';'", "':'", "'.'", "','" ]

    symbolicNames = [ "<INVALID>", "BOOLEAN", "BREAK", "CLASS", "CONTINUE", 
                      "DO", "ELSE", "EXTENDS", "FLOAT", "IF", "INT", "NEW", 
                      "STRING", "THEN", "FOR", "RETURN", "TRUE", "FALSE", 
                      "VOID", "NIL", "THIS", "FINAL", "STATIC", "TO", "DOWNTO", 
                      "OP0", "OP1", "OP2", "OP3", "OP4", "NOT", "CONCAT", 
                      "ASSIGN", "INITASSIGN", "LB", "RB", "LSB", "RSB", 
                      "LP", "RP", "SEMI", "CL", "DOT", "COMMA", "INTLIT", 
                      "FLOATLIT", "STRLIT", "WS", "COMMENT", "LINECOMMENT", 
                      "ID", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_classdecl = 1
    RULE_memberdecl = 2
    RULE_attributedecl = 3
    RULE_vardecl = 4
    RULE_typ = 5
    RULE_attrlist = 6
    RULE_attrname = 7
    RULE_subattrlist = 8
    RULE_constdecl = 9
    RULE_constattrlist = 10
    RULE_constattr = 11
    RULE_subconstattrlist = 12
    RULE_methoddecl = 13
    RULE_staticmethods = 14
    RULE_instancemethods = 15
    RULE_paramlist = 16
    RULE_subparamlist = 17
    RULE_param = 18
    RULE_returntype = 19
    RULE_idlist = 20
    RULE_blockstmt = 21
    RULE_stmtlist = 22
    RULE_stmt = 23
    RULE_assignstmt = 24
    RULE_forstmt = 25
    RULE_ifstmt = 26
    RULE_breakstmt = 27
    RULE_continuestmt = 28
    RULE_returnstmt = 29
    RULE_expr = 30
    RULE_expr1 = 31
    RULE_expr2 = 32
    RULE_expr3 = 33
    RULE_expr4 = 34
    RULE_expr5 = 35
    RULE_expr6 = 36
    RULE_expr7 = 37
    RULE_expr8 = 38
    RULE_expr9 = 39
    RULE_expr10 = 40
    RULE_expr11 = 41
    RULE_expr12 = 42
    RULE_operands = 43
    RULE_exprlist = 44
    RULE_fieldaccess = 45
    RULE_argumentslist = 46
    RULE_scalarvar = 47
    RULE_lhs = 48
    RULE_arraycell = 49
    RULE_arraytype = 50
    RULE_attributeinstancedecl = 51
    RULE_literallist = 52
    RULE_literal = 53
    RULE_subliterallist = 54

    ruleNames =  [ "program", "classdecl", "memberdecl", "attributedecl", 
                   "vardecl", "typ", "attrlist", "attrname", "subattrlist", 
                   "constdecl", "constattrlist", "constattr", "subconstattrlist", 
                   "methoddecl", "staticmethods", "instancemethods", "paramlist", 
                   "subparamlist", "param", "returntype", "idlist", "blockstmt", 
                   "stmtlist", "stmt", "assignstmt", "forstmt", "ifstmt", 
                   "breakstmt", "continuestmt", "returnstmt", "expr", "expr1", 
                   "expr2", "expr3", "expr4", "expr5", "expr6", "expr7", 
                   "expr8", "expr9", "expr10", "expr11", "expr12", "operands", 
                   "exprlist", "fieldaccess", "argumentslist", "scalarvar", 
                   "lhs", "arraycell", "arraytype", "attributeinstancedecl", 
                   "literallist", "literal", "subliterallist" ]

    EOF = Token.EOF
    BOOLEAN=1
    BREAK=2
    CLASS=3
    CONTINUE=4
    DO=5
    ELSE=6
    EXTENDS=7
    FLOAT=8
    IF=9
    INT=10
    NEW=11
    STRING=12
    THEN=13
    FOR=14
    RETURN=15
    TRUE=16
    FALSE=17
    VOID=18
    NIL=19
    THIS=20
    FINAL=21
    STATIC=22
    TO=23
    DOWNTO=24
    OP0=25
    OP1=26
    OP2=27
    OP3=28
    OP4=29
    NOT=30
    CONCAT=31
    ASSIGN=32
    INITASSIGN=33
    LB=34
    RB=35
    LSB=36
    RSB=37
    LP=38
    RP=39
    SEMI=40
    CL=41
    DOT=42
    COMMA=43
    INTLIT=44
    FLOATLIT=45
    STRLIT=46
    WS=47
    COMMENT=48
    LINECOMMENT=49
    ID=50
    ERROR_CHAR=51
    UNCLOSE_STRING=52
    ILLEGAL_ESCAPE=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def classdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ClassdeclContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ClassdeclContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKOOLParser.CLASS:
                self.state = 110
                self.classdecl()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def memberdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.MemberdeclContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.MemberdeclContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassdecl" ):
                return visitor.visitClassdecl(self)
            else:
                return visitor.visitChildren(self)




    def classdecl(self):

        localctx = BKOOLParser.ClassdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(BKOOLParser.CLASS)
            self.state = 119
            self.match(BKOOLParser.ID)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EXTENDS:
                self.state = 120
                self.match(BKOOLParser.EXTENDS)
                self.state = 121
                self.match(BKOOLParser.ID)


            self.state = 124
            self.match(BKOOLParser.LP)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.FLOAT) | (1 << BKOOLParser.INT) | (1 << BKOOLParser.STRING) | (1 << BKOOLParser.VOID) | (1 << BKOOLParser.FINAL) | (1 << BKOOLParser.STATIC) | (1 << BKOOLParser.ID))) != 0):
                self.state = 125
                self.memberdecl()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 131
            self.match(BKOOLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributedecl(self):
            return self.getTypedRuleContext(BKOOLParser.AttributedeclContext,0)


        def methoddecl(self):
            return self.getTypedRuleContext(BKOOLParser.MethoddeclContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_memberdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberdecl" ):
                return visitor.visitMemberdecl(self)
            else:
                return visitor.visitChildren(self)




    def memberdecl(self):

        localctx = BKOOLParser.MemberdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_memberdecl)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.attributedecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.methoddecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributedeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(BKOOLParser.VardeclContext,0)


        def constdecl(self):
            return self.getTypedRuleContext(BKOOLParser.ConstdeclContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attributedecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributedecl" ):
                return visitor.visitAttributedecl(self)
            else:
                return visitor.visitChildren(self)




    def attributedecl(self):

        localctx = BKOOLParser.AttributedeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attributedecl)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.constdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(BKOOLParser.TypContext,0)


        def attrlist(self):
            return self.getTypedRuleContext(BKOOLParser.AttrlistContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = BKOOLParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.STATIC:
                self.state = 141
                self.match(BKOOLParser.STATIC)


            self.state = 144
            self.typ()
            self.state = 145
            self.attrlist()
            self.state = 146
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(BKOOLParser.INT, 0)

        def FLOAT(self):
            return self.getToken(BKOOLParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(BKOOLParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(BKOOLParser.STRING, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def arraytype(self):
            return self.getTypedRuleContext(BKOOLParser.ArraytypeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTyp" ):
                return visitor.visitTyp(self)
            else:
                return visitor.visitChildren(self)




    def typ(self):

        localctx = BKOOLParser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typ)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(BKOOLParser.INT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.match(BKOOLParser.FLOAT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 150
                self.match(BKOOLParser.BOOLEAN)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 151
                self.match(BKOOLParser.STRING)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 152
                self.match(BKOOLParser.ID)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 153
                self.arraytype()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attrname(self):
            return self.getTypedRuleContext(BKOOLParser.AttrnameContext,0)


        def subattrlist(self):
            return self.getTypedRuleContext(BKOOLParser.SubattrlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attrlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrlist" ):
                return visitor.visitAttrlist(self)
            else:
                return visitor.visitChildren(self)




    def attrlist(self):

        localctx = BKOOLParser.AttrlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attrlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.attrname()
            self.state = 157
            self.subattrlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrnameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def INITASSIGN(self):
            return self.getToken(BKOOLParser.INITASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attrname

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrname" ):
                return visitor.visitAttrname(self)
            else:
                return visitor.visitChildren(self)




    def attrname(self):

        localctx = BKOOLParser.AttrnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attrname)
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.match(BKOOLParser.ID)
                self.state = 160
                self.match(BKOOLParser.INITASSIGN)
                self.state = 161
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.match(BKOOLParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubattrlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def attrname(self):
            return self.getTypedRuleContext(BKOOLParser.AttrnameContext,0)


        def subattrlist(self):
            return self.getTypedRuleContext(BKOOLParser.SubattrlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_subattrlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubattrlist" ):
                return visitor.visitSubattrlist(self)
            else:
                return visitor.visitChildren(self)




    def subattrlist(self):

        localctx = BKOOLParser.SubattrlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_subattrlist)
        try:
            self.state = 170
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.match(BKOOLParser.COMMA)
                self.state = 166
                self.attrname()
                self.state = 167
                self.subattrlist()
                pass
            elif token in [BKOOLParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def typ(self):
            return self.getTypedRuleContext(BKOOLParser.TypContext,0)


        def constattrlist(self):
            return self.getTypedRuleContext(BKOOLParser.ConstattrlistContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_constdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstdecl" ):
                return visitor.visitConstdecl(self)
            else:
                return visitor.visitChildren(self)




    def constdecl(self):

        localctx = BKOOLParser.ConstdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_constdecl)
        try:
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.match(BKOOLParser.FINAL)
                self.state = 173
                self.typ()
                self.state = 174
                self.constattrlist()
                self.state = 175
                self.match(BKOOLParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.match(BKOOLParser.FINAL)
                self.state = 178
                self.match(BKOOLParser.STATIC)
                self.state = 179
                self.typ()
                self.state = 180
                self.constattrlist()
                self.state = 181
                self.match(BKOOLParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 183
                self.match(BKOOLParser.STATIC)
                self.state = 184
                self.match(BKOOLParser.FINAL)
                self.state = 185
                self.typ()
                self.state = 186
                self.constattrlist()
                self.state = 187
                self.match(BKOOLParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstattrlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constattr(self):
            return self.getTypedRuleContext(BKOOLParser.ConstattrContext,0)


        def subconstattrlist(self):
            return self.getTypedRuleContext(BKOOLParser.SubconstattrlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_constattrlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstattrlist" ):
                return visitor.visitConstattrlist(self)
            else:
                return visitor.visitChildren(self)




    def constattrlist(self):

        localctx = BKOOLParser.ConstattrlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_constattrlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.constattr()
            self.state = 192
            self.subconstattrlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstattrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def INITASSIGN(self):
            return self.getToken(BKOOLParser.INITASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_constattr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstattr" ):
                return visitor.visitConstattr(self)
            else:
                return visitor.visitChildren(self)




    def constattr(self):

        localctx = BKOOLParser.ConstattrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_constattr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self.match(BKOOLParser.ID)
            self.state = 195
            self.match(BKOOLParser.INITASSIGN)
            self.state = 196
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubconstattrlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def constattr(self):
            return self.getTypedRuleContext(BKOOLParser.ConstattrContext,0)


        def subconstattrlist(self):
            return self.getTypedRuleContext(BKOOLParser.SubconstattrlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_subconstattrlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubconstattrlist" ):
                return visitor.visitSubconstattrlist(self)
            else:
                return visitor.visitChildren(self)




    def subconstattrlist(self):

        localctx = BKOOLParser.SubconstattrlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_subconstattrlist)
        try:
            self.state = 203
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 198
                self.match(BKOOLParser.COMMA)
                self.state = 199
                self.constattr()
                self.state = 200
                self.subconstattrlist()
                pass
            elif token in [BKOOLParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethoddeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def staticmethods(self):
            return self.getTypedRuleContext(BKOOLParser.StaticmethodsContext,0)


        def instancemethods(self):
            return self.getTypedRuleContext(BKOOLParser.InstancemethodsContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_methoddecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethoddecl" ):
                return visitor.visitMethoddecl(self)
            else:
                return visitor.visitChildren(self)




    def methoddecl(self):

        localctx = BKOOLParser.MethoddeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_methoddecl)
        try:
            self.state = 207
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.STATIC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 205
                self.staticmethods()
                pass
            elif token in [BKOOLParser.BOOLEAN, BKOOLParser.FLOAT, BKOOLParser.INT, BKOOLParser.STRING, BKOOLParser.VOID, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 206
                self.instancemethods()
                pass
            else:
                raise NoViableAltException(self)
